[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
known_first_party = "blockly_runner"
default_section = "THIRDPARTY"
skip = ".tox,.eggs,ci/templates,build,dist"
