[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
known_first_party = "blockly_runner"
default_section = "THIRDPARTY"
skip = ".tox,.eggs,ci/templates,build,dist"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = false
plugins = []
exclude = [ "tests" ]
